# translation-cmd

./: Cargo.toml  install.bat  run.bat
src/: main.rs
src/conf/: config.toml
src/service/: config.rs  mod.rs  translate.rs
src/types/: args.rs  config.rs
src/utils/: string.rs
