[package]
name = "trans"
version = "0.2.0"
edition = "2021"
authors = ["Stark"]

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.5.6"
structopt = "0.3.13"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
rand = "0.8"
rust-crypto = "0.2.36"
urlencoding = "2.1.3"
serde_json = "1.0"
